[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-data-toolkit"
version = "4.0.0"
description = "A comprehensive data analysis toolkit with Streamlit GUI, neural networks, and integrated tutorial"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Data Toolkit Contributors"}
]
keywords = [
    "data-analysis",
    "statistics",
    "machine-learning",
    "neural-networks",
    "deep-learning",
    "visualization",
    "bayesian",
    "time-series",
    "causality",
    "gui",
    "streamlit",
    "plotly",
    "tkinter"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "streamlit>=1.28.0",
    "Pillow>=9.0.0",
    "PyWavelets>=1.4.0",
    "mlxtend>=0.23.0",
    "umap-learn>=0.5.0",
    "keras>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
rust = [
    "maturin>=1.0.0",
]
neural = [
    "tensorflow>=2.10.0",
]
survival = [
    "lifelines>=0.27.0",
]
interpretability = [
    "shap>=0.42.0",
    "lime>=0.2.0",
]
timeseries = [
    "prophet>=1.1.0",
    "ruptures>=1.1.0",
    "dtaidistance>=2.3.0",
]
ecology = [
    "pymannkendall>=1.4.0",
    "esda>=2.4.0",
    "libpysal>=4.7.0",
]
reporting = [
    "jinja2>=3.0.0",
]
image = [
    "Pillow>=9.0.0",
    "opencv-python>=4.6.0",
]
all = [
    "tensorflow>=2.10.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "lifelines>=0.27.0",
    "shap>=0.42.0",
    "lime>=0.2.0",
    "prophet>=1.1.0",
    "ruptures>=1.1.0",
    "dtaidistance>=2.3.0",
    "pymannkendall>=1.4.0",
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/bhlevca/advanced-data-toolkit"
Documentation = "https://github.com/bhlevca/advanced-data-toolkit#readme"
Repository = "https://github.com/bhlevca/advanced-data-toolkit.git"
Issues = "https://github.com/bhlevca/advanced-data-toolkit/issues"

[project.scripts]
data-toolkit = "data_toolkit.main_gui:main"
data-toolkit-streamlit = "data_toolkit.streamlit_app:main"

[project.gui-scripts]
data-toolkit-gui = "data_toolkit.main_gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=data_toolkit"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
